@@ -219,6 +219,10 @@ FUNCTION_SECTIONS=@function_sections@
 AWK=@AWK@
 NAKED_POINTERS=false
 
+# RuntimeID values
+BYTECODE_RUNTIME_ID=@bytecode_runtime_id@
+NATIVE_RUNTIME_ID=@native_runtime_id@
+
 # Deprecated variables
 
 ## Variables deprecated since OCaml 5.2
